Add full size background on home page

--- a/eOdznaki-SPA/src/styles.scss
+++ b/eOdznaki-SPA/src/styles.scss
@@ -4,3 +4,11 @@
 #toast-container > div {
     opacity:1;
 }
+
+.background-img {
+  background: url('assets/background.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
