--- a/eOdznaki-SPA/src/app/components/navbar/navbar.component.html
+++ b/eOdznaki-SPA/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link waves-light" mdbWavesEffect>Leaderboard</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" mdbWavesEffect>Forum</a>
+        <a class="nav-link waves-light" mdbWavesEffect [routerLink]="['/forum']">Forum</a>
       </li>
       <li *ngIf="authService.roleMatch(['Admin', 'Moderator'])" class="nav-item">
         <a class="nav-link waves-light" mdbWavesEffect>Manage</a>
