--- a/eOdznaki-SPA/src/app/components/navbar/navbar.component.html
+++ b/eOdznaki-SPA/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,9 @@
       <li class="nav-item">
         <a class="nav-link waves-light" mdbWavesEffect>Forum</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" mdbWavesEffect [routerLink]="['/trail']">Trail</a>
+      </li>
       <li *ngIf="authService.roleMatch(['Admin', 'Moderator'])" class="nav-item">
         <a class="nav-link waves-light" mdbWavesEffect>Manage</a>
       </li>
