--- a/eOdznaki-SPA/src/styles.scss
+++ b/eOdznaki-SPA/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~ngx-toastr/toastr.css';
+@import "~@angular/cdk/overlay-prebuilt.css";
 
 #toast-container > div {
     opacity:1;
