Fix register link

--- a/eOdznaki-SPA/src/app/components/login/login.component.html
+++ b/eOdznaki-SPA/src/app/components/login/login.component.html
@@ -30,7 +30,7 @@
       </div>
 
       <p>Not a member?
-        <a href="#register" (click)="registerButton()">Register</a>
+        <a (click)="registerButton()" style="color: #007BFF">Register</a>
       </p>
 
       <p>or sign in with:</p>
