--- a/eOdznaki-SPA/src/app/components/profile-edit/profile-edit.component.html
+++ b/eOdznaki-SPA/src/app/components/profile-edit/profile-edit.component.html
@@ -83,7 +83,7 @@
                                [(ngModel)]="user.email" #email="ngModel" required
                                [pattern]="'^\\w+@[a-zA-Z_]+?\\.[a-zA-Z]{2,3}$'">
                         <label for="email">E-mail</label>
-                        <mdb-error *ngIf="email.invalid && (email.dirty || email.touched)">Invalid Email
+                        <mdb-error *ngIf="email.invalid && (email.dirty || email.touched)">Invalid E-mail
                         </mdb-error>
                       </div>
                     </div>
@@ -95,7 +95,7 @@
                                [pattern]="'^\\s*(?:\\+?(\\d{1,3}))?([-. (]*(\\d{3})[-. )]*)?((\\d{3})[-. ]*(\\d{2,4})(?:[-.x ]*(\\d+))?)\\s*$'">
                         <label for="phoneNumber">Phone number</label>
                         <mdb-error *ngIf="phoneNumber.invalid && (phoneNumber.dirty || phoneNumber.touched)">Invalid
-                          Phone Number
+                          Phone number
                         </mdb-error>
                       </div>
                     </div>
