Fix undefined thread

--- a/eOdznaki-SPA/src/app/components/post/post.component.html
+++ b/eOdznaki-SPA/src/app/components/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="thread">
+<div class="thread" *ngIf="thread">
   <h1>{{ thread.title }}</h1>
   <p>Author name: {{ thread.authorName }}</p>
   <p>Created: {{ thread.created }}</p>
