Update background-image links

--- a/eOdznaki-SPA/src/app/components/register/register.component.html
+++ b/eOdznaki-SPA/src/app/components/register/register.component.html
@@ -1,6 +1,7 @@
 <mdb-card class="mt-4 mb-4">
 
-  <mdb-card-header class="info-color white-text text-center pt-4 pb-3">
+  <mdb-card-header class="info-color white-text text-center pt-4 pb-3"
+                   style="background-image: url(../../../assets/background-gradient.jpg);">
     <h5>
       <strong>Sign up</strong>
     </h5>
