--- a/eOdznaki-SPA/src/app/components/home/home.component.html
+++ b/eOdznaki-SPA/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
   <div class="row h-100">
     <div class="col-12 p-0 align-self-center">
       <div class="card card-image"
-           style="background-image: url(https://mdbootstrap.com/img/Photos/Others/gradient1.jpg);">
+           style="background-image: url(../../../assets/background-gradient.jpg);">
         <div class="text-white text-center py-5 px-4 my-5">
           <div>
             <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Dashboard Placeholder</strong></h2>
