Update avatar in profile edit

--- a/eOdznaki-SPA/src/app/components/profile-edit/profile-edit.component.html
+++ b/eOdznaki-SPA/src/app/components/profile-edit/profile-edit.component.html
@@ -7,7 +7,7 @@
                style="background-image: url(../../../assets/background-gradient.jpg);">
 
             <div class="avatar mx-auto mt-2">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle mt-4"
+              <img src="{{user.avatarUrl || '../../../assets/user.png'}}" class="rounded-circle mt-4"
                    width="175">
             </div>
 
