Update change avatar hover

--- a/eOdznaki-SPA/src/app/components/profile-edit/profile-edit.component.scss
+++ b/eOdznaki-SPA/src/app/components/profile-edit/profile-edit.component.scss
@@ -11,3 +11,7 @@ form {
   border-top: none;
   background: #fff;
 }
+
+.rgba-black-strong, .rgba-black-strong:after {
+  background-color: #00000077;
+}
