--- a/eOdznaki-SPA/src/app/components/profile-edit/profile-edit.component.html
+++ b/eOdznaki-SPA/src/app/components/profile-edit/profile-edit.component.html
@@ -7,9 +7,34 @@
                style="background-image: url(../../../assets/background-gradient.jpg);">
 
             <div class="avatar mx-auto mt-2">
-              <img src="{{user.avatarUrl || '../../../assets/user.png'}}" class="rounded-circle mt-4"
-                   width="175">
+              <div class="view overlay mt-4" (click)="basicModal.show()">
+                <img src="{{user.avatarUrl || '../../../assets/user.png'}}" width="175"
+                     class="img-fluid rounded-circle hoverable">
+                <div class="mask flex-center waves-effect waves-light rounded-circle rgba-black-strong">
+                  <p class="white-text">Change Avatar</p>
+                </div>
+              </div>
             </div>
+
+            <!--<div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">-->
+            <!--<div class="modal-dialog" role="document">-->
+            <!--<div class="modal-content">-->
+            <!--<div class="modal-header">-->
+            <!--<button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">-->
+            <!--<span aria-hidden="true">×</span>-->
+            <!--</button>-->
+            <!--<h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>-->
+            <!--</div>-->
+            <!--<div class="modal-body">-->
+            <!--...-->
+            <!--</div>-->
+            <!--<div class="modal-footer">-->
+            <!--<button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="basicModal.hide()" mdbWavesEffect>Close</button>-->
+            <!--<button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect>Save changes</button>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
 
             <mdb-card-body>
               <mdb-card-title
@@ -107,7 +132,6 @@
                         <label for="street">Street</label>
                       </div>
                     </div>
-
                   </div>
 
                   <div class="form-row">
