--- a/eOdznaki-SPA/src/app/components/forum/forum.component.html
+++ b/eOdznaki-SPA/src/app/components/forum/forum.component.html
@@ -1,23 +1,22 @@
 <div class="container">
 
   <div class="row">
-    <div class="col-md-8">
-      <button type="button" mdbBtn
-              color="default" rounded="true" style="float: left"
-              data-toggle="modal" data-target="#basicExample"
-              (click)="frame.show()" mdbWavesEffect
-              *ngIf="authService.roleMatch(['Admin', 'Moderator', 'Member'])">
-        <mdb-icon fas icon="plus"></mdb-icon>
-        <span>New thread</span>
-      </button>
-    </div>
+    <div class="col toolbar mt-2" style="background-image: url(../../../assets/background-gradient.jpg);">
+        <button type="button" class="btn btn-white waves-effect mt-3"
+                style="border-radius: 25px;"
+                data-toggle="modal" data-target="#basicExample"
+                (click)="frame.show()" mdbWavesEffect
+                *ngIf="authService.roleMatch(['Admin', 'Moderator', 'Member'])">
+          <mdb-icon fas icon="plus" class="mr-2"></mdb-icon>
+          <span>New thread</span>
+        </button>
 
-    <div class="col-md-4">
-      <form class="form-inline md-form form-sm" style="float: right" (keyup.enter)="searchForum()">
-        <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search"
-               mdbInput [formControl]="searchForm">
-        <i class="fas fa-search" aria-hidden="true" (click)="searchForum()"></i>
-      </form>
+        <form class="form-inline md-form form-sm" style="float: right" (keyup.enter)="searchForum()">
+          <input class="search ng-dirty ng-invalid ng-touched"
+                 type="text" placeholder="Search" aria-label="Search"
+                 mdbInput [formControl]="searchForm">
+          <i class="fas fa-search white-text magnifier" aria-hidden="true" (click)="searchForum()"></i>
+        </form>
     </div>
   </div>
 
@@ -58,7 +57,6 @@
   </div>
 
   <div class="row">
-
     <div class="col d-flex justify-content-center pt-3 pagination">
       <app-pagination
         [totalItems]="pagination.totalItems"
@@ -71,7 +69,7 @@
         (goPage)="goToPage($event)">
       </app-pagination>
     </div>
-
+  </div>
 </div>
 
 <div mdbModal #frame="mdbModal" class="modal fade top" id="frameModalTop" tabindex="-1" role="dialog"
