--- a/eOdznaki-SPA/src/app/components/forum/forum.component.html
+++ b/eOdznaki-SPA/src/app/components/forum/forum.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
-  <div class="row">
-    <div class="col toolbar mt-2" style="background-image: url(../../../assets/background-gradient.jpg);">
+  <div class="row card promoting-card mt-4" style="background-image: url(../../../assets/background-gradient.jpg);">
+    <div class="col toolbar mt-2">
         <button type="button" class="btn btn-white waves-effect mt-3"
                 style="border-radius: 25px;"
                 data-toggle="modal" data-target="#basicExample"
@@ -22,13 +22,13 @@
 
   <div class="row threads">
     <div class="col">
-      <div class="row card promoting-card my-3"
+      <div class="row card promoting-card my-4"
            *ngFor="let thread of threads"
            [routerLink]="['/forum', thread.id]"
            [id]="'thread-' + thread.id">
 
         <!-- Card content -->
-        <div class="card-body d-flex flex-row">
+        <div class="card-body d-flex flex-row pb-1">
 
           <!-- Avatar -->
           <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.jpg" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
