--- a/eOdznaki-SPA/src/app/components/forum/forum.component.scss
+++ b/eOdznaki-SPA/src/app/components/forum/forum.component.scss
@@ -1,14 +1,6 @@
 .container {
-  max-width: 800px;
-}
-
-.col-container {
-  display: table;
-  width: 100%;
-}
-
-.col {
-  display: table-cell;
+  max-width: 750px;
+  max-height: 650px!important;
 }
 
 .card {
@@ -16,7 +8,7 @@
 }
 
 .threads {
-  min-height: 697px;
+  min-height: 669px;
 }
 
 .pagination {
