Change pagination style

--- a/eOdznaki-SPA/src/app/components/forum/forum.component.html
+++ b/eOdznaki-SPA/src/app/components/forum/forum.component.html
@@ -57,7 +57,7 @@
   </div>
 
   <div class="row">
-    <div class="col d-flex justify-content-center pt-3 pagination">
+    <div class="col d-flex justify-content-center pagination">
       <app-pagination
         [totalItems]="pagination.totalItems"
         [currentPage]="pagination.currentPage"
