--- a/eOdznaki-SPA/src/app/components/post/post.component.scss
+++ b/eOdznaki-SPA/src/app/components/post/post.component.scss
@@ -1,6 +1,6 @@
 .container {
-  height: calc(100vh - 55.99px);
-  max-width: 800px;
+  max-width: 750px;
+  max-height: 650px!important;
 }
 
 .card {
@@ -8,14 +8,23 @@
 }
 
 .posts {
-  min-height: 697px;
-}
-
-.pagination {
-  background-color: white;
+  min-height: 700px;
 }
 
 .threadTitle {
   color: whitesmoke;
   padding: 10px;
+}
+
+.toolbar {
+  max-height: 60px;
+}
+
+.backArrow {
+  color: white;
+  font-size: 1.5em;
+}
+
+.card-title {
+  font-size: 1.1em;
 }
