--- a/eOdznaki-SPA/src/app/components/post/post.component.html
+++ b/eOdznaki-SPA/src/app/components/post/post.component.html
@@ -73,7 +73,7 @@
             <div class="col">
               <button type="button" class="btn btn-info waves-effect float-right mt-3 mr-0"
                       data-toggle="modal" data-target="#basicExample"
-                      (click)="frame.show()" mdbWavesEffect
+                      (click)="newPost.show()" mdbWavesEffect
                       *ngIf="authService.roleMatch(['Admin', 'Moderator', 'Member'])">
                 <span>Answer</span>
               </button>
@@ -103,14 +103,14 @@
   </div>
 </div>
 
-<div mdbModal #frame="mdbModal" class="modal fade top" id="frameModalTop" tabindex="-1" role="dialog"
+<div mdbModal #newPost="mdbModal" class="modal fade top" id="frameModalTop" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
 
       <div class="modal-header text-center">
         <h4 class="modal-title w-100 font-weight-bold">Answer</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="newPost.hide()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
