--- a/eOdznaki-SPA/src/app/components/post/post.component.html
+++ b/eOdznaki-SPA/src/app/components/post/post.component.html
@@ -31,7 +31,8 @@
     <div class="col">
       <div class="row card promoting-card mb-3"
            *ngFor="let post of posts; let i = index;"
-           [id]="'post-' + post.id">
+           [id]="'post-' + post.id"
+           on-mouseover="hoveredIndex = i" on-mouseleave="hoveredIndex = null">
 
         <!-- Card content -->
         <div class="card-body d-flex flex-row">
@@ -53,8 +54,8 @@
 
         <!-- Card content -->
         <div class="card-body" *ngIf="authService.roleMatch(['Admin', 'Moderator', 'Member'])">
-          <div class="row">
-            <div class="col">
+          <div class="row buttons">
+            <div class="col" *ngIf="hoveredIndex === i">
               <i class="fas fa-quote-right text-muted float-right p-1 my-1"
                  data-toggle="tooltip" data-placement="top" title="Quote post"></i>
 
