--- a/eOdznaki-SPA/src/app/components/post/post.component.html
+++ b/eOdznaki-SPA/src/app/components/post/post.component.html
@@ -38,7 +38,7 @@
         <div class="card-body d-flex flex-row">
 
           <!-- Avatar -->
-          <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.jpg" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
+          <img src="{{ post.authorAvatar || '../../../assets/user.png' }}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
 
           <!-- Content -->
           <div>
