--- a/eOdznaki-SPA/src/app/components/navbar/navbar.component.html
+++ b/eOdznaki-SPA/src/app/components/navbar/navbar.component.html
@@ -14,8 +14,12 @@
       <li class="nav-item">
         <a class="nav-link waves-light" mdbWavesEffect [routerLink]="['/forum']">Forum</a>
       </li>
-      <li *ngIf="authService.roleMatch(['Admin', 'Moderator'])" class="nav-item">
-        <a class="nav-link waves-light" mdbWavesEffect>Manage</a>
+      <li *ngIf="authService.roleMatch(['Admin', 'Moderator'])" class="nav-item dropdown" dropdown>
+        <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+          Manage<span class="caret"></span></a>
+        <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+          <a class="dropdown-item waves-light" [routerLink]="['/manage/roles']" mdbWavesEffect>User Roles</a>
+        </div>
       </li>
 
     </ul>
