update searching page and display

--- a/eOdznaki-SPA/src/app/components/search/search.component.scss
+++ b/eOdznaki-SPA/src/app/components/search/search.component.scss
@@ -1,3 +1,22 @@
-.posts {
-  margin-left: 50px;
+.container {
+  max-width: 750px;
+  max-height: 650px!important;
+}
+
+.threads {
+  min-height: 669px;
+}
+
+.magnifier {
+  font-size: 25px;
+}
+
+::placeholder {
+  color: ghostwhite;
+  font-size: 0.8em;
+}
+
+.search {
+  color: white;
+  font-size: 1.2em;
 }
