--- a/eOdznaki-SPA/src/app/components/search/search.component.html
+++ b/eOdznaki-SPA/src/app/components/search/search.component.html
@@ -43,8 +43,7 @@
             <div class="col">
               <div class="row card promoting-card mb-3"
                   *ngFor="let post of thread.forumPosts; let i = index;"
-                  [id]="'post-' + post.id"
-                  on-mouseover="hoveredIndex = i" on-mouseleave="hoveredIndex = null">
+                  [id]="'post-' + post.id">
         
                 <!-- Card content -->
                 <div class="card-body d-flex flex-row">
